--- a/src/pages/games/dice/Ticks.scss
+++ b/src/pages/games/dice/Ticks.scss
@@ -7,7 +7,6 @@ $ticks-color: $gray-400 !default;
   top: -2rem;
   left: 0;
   width: 100%;
-  z-index: -2;
 }
 
 .ticks__tick {
